# library-management-system

./: Admin.cpp  Admin.h  AdminAnalytics.cpp  AdminAnalytics.h  AdvancedSearch.cpp  AdvancedSearch.h  AuditLogger.cpp  AuditLogger.h  Book.cpp  Book.h  BookCopies.cpp  BookCopies.h  BookRating.cpp  BookRating.h  BorrowExtension.cpp  BorrowExtension.h  BorrowRecord.cpp  BorrowRecord.h  CMakeLists.txt  Ebook.cpp  Ebook.h  FineManager.cpp  FineManager.h  InputHelper.cpp  InputHelper.h  LibraryManagementQtApp.cpp  LibraryManagementQtApp.pro  LibraryManager.cpp  LibraryManager.h  Member.cpp  Member.h  Notification.cpp  Notification.h  README.md  README_CEP.txt  ReportGenerator.cpp  ReportGenerator.h  Resource.cpp  Resource.h  SYSTEMEXCEPTIONS.h  (+10 more)
